Fixing the language server icon colors in dark mode.

--- a/x-pack/plugins/code/public/components/main/main.scss
+++ b/x-pack/plugins/code/public/components/main/main.scss
@@ -259,3 +259,8 @@
     border-top: none;
   }
 }
+
+
+.codeIcon__language path {
+  fill: $euiColorDarkestShade;
+}
